syntax = "proto3";

package TripService.grpc;
option java_package = "proto.grpc";

import "google/protobuf/timestamp.proto";

service TripService {
  rpc SearchTripPreview(SearchTripPreviewRequest) returns(SearchTripPreviewResponse);
  rpc ConfirmBooking(ConfirmBookingRequest) returns(ConfirmBookingResponse);
  rpc GetIncompletedBooking(GetIncompletedBookingRequest) returns(GetIncompletedBookingResponse);
  rpc UpdateBookingStatus(UpdateBookingRequest) returns (UpdateBookingResponse);
  rpc GetBookingHistory(GetBookingHistoryRequest) returns (GetBookingHistoryResponse);
}

message Pagination {
  uint64 current_page = 1;
  uint64 prev_page = 2;
  uint64 next_page = 3;
  uint64 total_page = 4;
}

enum BookingStatus {
  INCOMPLETED = 0;        // The booking has been confirmed but not completed
  COMPLETED = 1;          // The booking has been completed
  CANCELED = 2;           // The booking has been canceled
}

message TripBooking {
  uint64 id = 1;
  string pickup = 2;
  string destination = 3;
  double distance = 4;
  double fare = 5;
  string card_number = 6;
  google.protobuf.Timestamp estimated_arrival_date_time = 7;
  int64 estimated_waiting_time = 8;
  BookingStatus booking_status = 9;
  uint64 user_id = 10;
}

message SearchTripPreviewRequest {
  string pickup = 1;
  string destination = 2;
}

message SearchTripPreviewResponse {
  string pickup = 1;
  string destination = 2;
  double distance = 3;
  double fare = 4;
  google.protobuf.Timestamp estimated_arrival_date_time = 5;
  int64 estimated_waiting_time = 6;
  int64 num_of_available_taxis = 7;
  repeated double nearest_taxi_coordinates = 8;
}

message ConfirmBookingRequest {
  string pickup = 1;
  string destination = 2;
  double distance = 3;
  double fare = 4;
  string card_number = 5;
  google.protobuf.Timestamp estimated_arrival_date_time = 6;
  int64 estimated_waiting_time = 7;
  BookingStatus booking_status = 8;
  uint64 user_id = 9;
}

message ConfirmBookingResponse {
  string result = 1;
}

message GetIncompletedBookingRequest {
  uint64 user_id = 1;
  BookingStatus booking_status = 2;
}

message GetIncompletedBookingResponse {
  TripBooking trip_booking = 1;
}

// For cancelling or completed
message UpdateBookingRequest {
  uint64 id = 1;
  string pickup = 2;
  string destination = 3;
  double distance = 4;
  double fare = 5;
  string card_number = 6;
  google.protobuf.Timestamp estimated_arrival_date_time = 7;
  int64 estimated_waiting_time = 8;
  BookingStatus booking_status = 9;
  uint64 user_id = 10;
}

message UpdateBookingResponse {
  string result = 1;
}

message GetBookingHistoryRequest {
  uint64 page = 1;
  uint64 limit = 2;
  uint64 user_id = 3;
  // Filters
  repeated BookingStatus booking_statuses = 4; // List of booking statuses to filter by

  // Sorting
  bool order_asc = 5; // If true, order by ascending date; if false, order by descending
}

message GetBookingHistoryResponse {
  Pagination pagination = 1;
  repeated TripBooking result = 2;
}